--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/utils",
+  "name": "core",
   "version": "0.0.0",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -10,20 +10,22 @@
     "dist/**"
   ],
   "scripts": {
-    "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
-    "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
+    "build": "swc src --out-dir dist --config-file ./.swcrc",
+    "dev": "swc src --watch --out-dir dist --config-file ./.swcrc",
     "lint": "eslint \"src/**/*.ts*\"",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
   },
   "devDependencies": {
-    "@acme/tsconfig": "workspace:*",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "eslint": "^7.32.0",
-    "eslint-config-acme": "workspace:*",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.62",
+    "@types/react": "^18.2.9",
+    "@types/react-dom": "^18.2.4",
+    "eslint": "^8.42.0",
+    "eslint-config-base": "workspace:*",
     "react": "^18.2.0",
-    "tsup": "^5.10.1",
-    "typescript": "^4.5.3"
+    "tsconfig": "workspace:*",
+    "tsup": "^6.7.0",
+    "typescript": "^5.1.3"
   },
   "publishConfig": {
     "access": "public"
