--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,6 +10,7 @@
     "dist/**"
   ],
   "scripts": {
+    "test": "jest",
     "build": "swc src --out-dir dist --config-file ./.swcrc",
     "dev": "swc src --watch --out-dir dist --config-file ./.swcrc",
     "lint": "eslint \"src/**/*.ts*\"",
@@ -18,10 +19,13 @@
   "devDependencies": {
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.62",
+    "@swc/jest": "^0.2.26",
+    "@types/jest": "^29.5.2",
     "@types/react": "^18.2.9",
     "@types/react-dom": "^18.2.4",
     "eslint": "^8.42.0",
     "eslint-config-base": "workspace:*",
+    "jest": "^29.5.0",
     "react": "^18.2.0",
     "tsconfig": "workspace:*",
     "tsup": "^6.7.0",
