--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,26 +16,25 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x]
+        node-version: [18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
-      
+
     - name: Setup pnpm 8
-      uses: pnpm/action-setup@v3
+      uses: pnpm/action-setup@v2
       with:
         version: 8
-          
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        
+
     - name: Install Dependencies
       run: pnpm i
-        
-    - name: Install Dependencies
+
+    - name: Run tests
       run: pnpm test
