--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,6 +11,7 @@
   ],
   "scripts": {
     "test": "jest",
+    "coverage": "jest --coverage",
     "build": "swc src --out-dir dist --config-file ./.swcrc",
     "dev": "swc src --watch --out-dir dist --config-file ./.swcrc",
     "lint": "eslint \"src/**/*.ts*\"",
@@ -20,13 +21,18 @@
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.62",
     "@swc/jest": "^0.2.26",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.2",
     "@types/react": "^18.2.9",
     "@types/react-dom": "^18.2.4",
+    "@types/testing-library__jest-dom": "^5.14.6",
     "eslint": "^8.42.0",
     "eslint-config-base": "workspace:*",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "react": "^18.2.0",
+    "react-test-renderer": "^18.2.0",
     "tsconfig": "workspace:*",
     "tsup": "^6.7.0",
     "typescript": "^5.1.3"
