--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -7,7 +7,10 @@
     "start": "next start ",
     "dev": "next dev -p 3002",
     "lint": "next lint",
-    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf .next"
+    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf .next",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_0a7361435b4bd86"
   },
   "dependencies": {
     "core": "workspace:*",
@@ -16,11 +19,23 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.22",
+    "@storybook/addon-interactions": "^7.0.22",
+    "@storybook/addon-links": "^7.0.22",
+    "@storybook/blocks": "^7.0.22",
+    "@storybook/nextjs": "^7.0.22",
+    "@storybook/react": "^7.0.22",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@types/node": "^20.2.6",
     "@types/react": "^18.2.9",
     "@types/react-dom": "^18.2.4",
+    "chromatic": "^6.19.8",
     "eslint-config-base": "workspace:*",
+    "eslint-plugin-storybook": "^0.6.12",
+    "storybook": "^7.0.22",
     "tsconfig": "workspace:*",
     "typescript": "^5.1.3"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "docs@0.0.0"
 }
