--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "next build",
-    "start": "next start ",
+    "build": "build-storybook",
+    "start": "storybook",
     "dev": "next dev -p 3002",
     "lint": "next lint",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf .next",
