--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,15 +10,30 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
-
+  chromatic-tests:
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
 
-    strategy:
-      matrix:
-        node-version: [18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+      - name: Setup pnpm 8
+        uses: pnpm/action-setup@v3
+        with:
+          version: 8
 
+      - name: Setup Node.js 18.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+
+      - name: Install dependencies
+        run: pnpm i
+
+      - name: Run Visual Tests
+        run: pnpm visual-tests
+
+  ci:
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
@@ -28,13 +43,19 @@ jobs:
       with:
         version: 8
 
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Setup Node.js 18.x
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 18.x
 
     - name: Install Dependencies
       run: pnpm i
 
-    - name: Run tests
+    - name: Run Tests
       run: pnpm test
+
+    - name: Run Lint
+      run: pnpm lint
+
+    - name: Run Type Check
+      run: pnpm tsc
