--- a/packages/eslint-config-base/package.json
+++ b/packages/eslint-config-base/package.json
@@ -7,7 +7,10 @@
     "eslint-config-next": "^13.4.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-turbo": "^1.10.3",
-    "eslint-plugin-react": "7.32.2"
+    "eslint-config-xo": "^0.43.1",
+    "eslint-config-xo-typescript": "^0.57.0",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-testing-library": "^5.11.0"
   },
   "publishConfig": {
     "access": "public"
