--- a/turbo.json
+++ b/turbo.json
@@ -6,7 +6,7 @@
       "outputs": ["dist/**", ".next/**", "!.next/cache/**"],
       "dependsOn": ["^build"]
     },
-    "visual-test": {},
+    "visual-tests": {},
     "test": {},
     "lint": {},
     "tsc": {},
