build core before tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,12 @@ jobs:
       - name: Install dependencies
         run: pnpm i
 
+      - name: Build
+        run: pnpm build
+
+      - name: Build Types
+        run: pnpm tsc
+
       - name: Run Visual Tests
         run: pnpm visual-tests
         env:
