--- a/turbo.json
+++ b/turbo.json
@@ -6,11 +6,10 @@
       "outputs": ["dist/**", ".next/**", "!.next/cache/**"],
       "dependsOn": ["^build"]
     },
-    "test": {
-      "outputs": ["coverage/**"],
-      "dependsOn": []
-    },
+    "visual-tests": {},
+    "test": {},
     "lint": {},
+    "tsc": {},
     "dev": {
       "cache": false,
       "persistent": true
