--- a/packages/core/.swcrc
+++ b/packages/core/.swcrc
@@ -1,7 +1,7 @@
 {
   "$schema": "http://json.schemastore.org/swcrc",
   "module": {
-    "type": "commonjs"
+    "type": "es6"
   },
   "jsc": {
     "parser": {
